@@ -6,6 +6,11 @@
 	add inet_ntop() function. Implementation from c-ares library.
 	See AUTHORS.
 
+	* configure.ac:
+	* src/lib/dlfcn/dlfcn.c:
+	* src/lib/dlfcn/Makefile.am:
+	add RTLD_DEFAULT support in dlsym() on Windows CE
+
 2011-09-14  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/dlfcn/dlfcn.c:
